--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
+      - name Set Environment-Variables
+        run echo "github.shortended_ref=${{ github.ref }} | sed s/"refs\/tags\/"//" >> $GITHUB_ENV
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -36,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}
-          release_name: Simple-Oauth-Config-Client ${{ github.ref }}
+          release_name: Simple-Oauth-Config-Client ${{ github.shortended_ref }}
           body_path: CHANGELOG.MD
           draft: false
           prerelease: false
@@ -46,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/simple-oauth-config-client-${{ github.ref }}.jar
-          asset_name: simple-oauth-config-client-${{ github.ref }}.jar
+          asset_path: ./target/simple-oauth-config-client-${{ github.shortended_ref }}.jar
+          asset_name: simple-oauth-config-client-${{ github.shortended_ref }}.jar
           asset_content_type: application/jar
