--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Set Environment-Variables
-        run: echo "github.shortended_ref=${{ github.ref }} | sed s/"refs\/tags\/"//" >> $GITHUB_ENV
+        run: echo "github.shortended_ref=${{ github.ref }}" | sed s/"refs\/tags\/"// >> $GITHUB_ENV
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
