--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Set Environment-Variables
-        run: echo "github.shortended_ref=${{ github.ref }}" | sed s/"refs\/tags\/"// >> $GITHUB_ENV
+        run: echo "finalName=${{ github.ref }}" | sed s/"refs\/tags\/"// >> $GITHUB_ENV
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -38,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}
-          release_name: Simple-Oauth-Config-Client ${{ env.github.shortended_ref }}
+          release_name: Simple-Oauth-Config-Client ${{ env.finalName }}
           body_path: CHANGELOG.MD
           draft: false
           prerelease: false
@@ -48,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/simple-oauth-config-client-${{ env.github.shortended_ref }}.jar
-          asset_name: simple-oauth-config-client-${{ env.github.shortended_ref }}.jar
+          asset_path: ./target/simple-oauth-config-client-${{ env.finalName }}.jar
+          asset_name: simple-oauth-config-client-${{ env.finalName }}.jar
           asset_content_type: application/jar
