--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</properties>
 	<groupId>org.remus</groupId>
 	<artifactId>simple-oauth-config-client</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>simple-oauth-config-client</name>
 	<description>Simple-OAuht-Client-Configurator</description>
 	<dependencies>
